AC_INIT(src/nmmain.py)

MAJOR_VERSION=1
MINOR_VERSION=0
MICRO_VERSION=0
VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION

AM_INIT_AUTOMAKE(nmcli, $VERSION)

AM_MAINTAINER_MODE

AM_PATH_PYTHON(2.4)

if test x$HAVE_PYTHON = xno; then
	AC_MSG_ERROR(Couldn't find python in the path)
fi

DDIR=`echo $datarootdir | sed -e "s,"'${prefix}'",$prefix,"`
AC_SUBST(DDIR)

# FIXME: We assume exec_prefix == prefix, which is probably bad
LIBDIR=`echo $libdir | sed -e "s,"'${exec_prefix}'",$prefix,"`
AC_SUBST(LIBDIR)

AC_OUTPUT([
Makefile
src/Makefile
src/nmcli
])

echo "

Configuration:

  Prefix:             ${prefix}
"
